--- a/style/global.css
+++ b/style/global.css
@@ -1,16 +1,59 @@
 
 
-
+*{
+    margin: 0;
+    padding: 0;
+}
 .header{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    color:black;
+    margin-bottom: 30px;
+    padding: 10px;
+    border-bottom-width: 1px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.nav{
- text-decoration: none;
- color:#55575F;
-cursor: pointer;
-margin-right: 14px;
+.section{
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+}
+
+.title{
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+
+
+.characters{
+    text-decoration: none;
+   
+}
+
+.characters .item{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    border: 1px ;
+    padding: 3px;
+    margin-bottom: 0.7rem;
+    border-radius: 0.375rem;
+        border-width: 1px;
+        border-color: #000000;
+
+}
+
+.characters .item img{
+    margin-right: 10px;
+    border-radius: 8px;
+    width: 40px;
+    height: 40px
+}
+
+.characters .item p{
+    margin-right: 6px;
+    color: #555f55;
 }
