--- a/style/global.css
+++ b/style/global.css
@@ -41,8 +41,8 @@
     padding: 3px;
     margin-bottom: 0.7rem;
     border-radius: 0.375rem;
-        border-width: 1px;
-        border-color: #000000;
+    border-width: 1px;
+    border-color: #000000;
 
 }
 
@@ -56,4 +56,16 @@
 .characters .item p{
     margin-right: 6px;
     color: #555f55;
+}
+
+
+.pagination{
+    display: flex;
+    justify-content: space-between;
+    max-width: 16rem;
+    margin: 30px;
+}
+
+.pagination p{
+    cursor: pointer;
 }
